--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -56,19 +56,17 @@
 
 				.event {
 					position: absolute;
-					top: 3px;
-					left: 30px;
-					right: 0;
-					font-size: 13px;
+					/*top: 3px;
+					left: 24px;*/
+					font-size: 16px;
 					white-space: nowrap;
 					text-overflow: ellipsis;
 					overflow: hidden;
 					color: #555;
 
-					img {
-						width: 16px;
+					> img {
+						width: 45px;
 						height: auto;
-						image-rendering: pixelated;
 					}
 				}
 			}
