--- a/src/calendar/calendar.css
+++ b/src/calendar/calendar.css
@@ -31,6 +31,7 @@
 			border-top: 2px solid var(--border_color);
 			background-color: #DDD1B2;
 			cursor: pointer;
+			text-align: left;
 
 
 			:nth-child(7n) {
@@ -54,20 +55,26 @@
 
 				}
 
-				.event {
-					position: absolute;
-					/*top: 3px;
-					left: 24px;*/
-					font-size: 16px;
-					white-space: nowrap;
-					text-overflow: ellipsis;
-					overflow: hidden;
-					color: #555;
+				
+			}
 
-					> img {
-						width: 45px;
-						height: auto;
-					}
+			.cropImagesToPlant{
+				border: 2px solid red;
+				margin: 2px
+			}
+
+			.event {
+				/*top: 3px;
+				left: 24px;*/
+				font-size: 16px;
+				white-space: nowrap;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				color: #555;
+
+				>img {
+					width: 45px;
+					height: auto;
 				}
 			}
 
